added text to html, centered and changed color with css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body {
-    background: lightblue;
+    background: violet;
+}
+h1 {
+    text-align: center;
+}
+h2 {
+    text-align: center;
+}
+h3 {
+    text-align: center;
+}
+p {
+    text-align: center;
+}
+ul {
+    text-align: center;
 }
