--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+head {
+    
+}
 body {
-    background: violet;
+    background-color: violet;
+    
 }
 h1 {
     text-align: center;
@@ -28,4 +32,16 @@ h4 {
 ul {
     text-align: left;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+button {
+    size: 80px;
+    padding: auto;
+    margin-right: 40px;
+    margin-top: auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+img {
+    float: right;
+    margin: 20px;
+    
 }
