--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h4 {
     text-align: left;
     font-size: larger;
     padding-left: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 ul {
     text-align: left;
